--- a/ShipperHN.Web/Web.config
+++ b/ShipperHN.Web/Web.config
@@ -8,7 +8,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="connString" connectionString="Data Source=NHAHT2\MSSQLSERVER03052;Initial Catalog=ShipperHN-14-01-2017;user id=sa;password=thanhnha;Integrated Security=false;" providerName="System.Data.SqlClient" />
+    <add name="connString" connectionString="Data Source=NHAHT\SQLEXPRESS;Initial Catalog=ShipperHN-14-01-2017;user id=sa;password=thanhnha;Integrated Security=false;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -24,6 +24,7 @@
     <add key="LogFilePath" value="\logs.txt" />
   </appSettings>
   <system.web>
+    <pages validateRequest="false" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
