--- a/ShipperHN.Web/ShipperHN.Web.csproj
+++ b/ShipperHN.Web/ShipperHN.Web.csproj
@@ -89,6 +89,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Bin\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System.Activities" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
