--- a/ShipperHN.Web/Web.config
+++ b/ShipperHN.Web/Web.config
@@ -26,10 +26,11 @@
   <system.web>
     <pages validateRequest="false" />
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <httpRuntime relaxedUrlToFileSystemMapping="true" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <customErrors mode="RemoteOnly" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -45,6 +46,10 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -54,18 +59,57 @@
     </compilers>
   </system.codedom>
   <system.webServer>
+    
+    <rewrite>
+      <rules>
+        
+        <rule name="Index" stopProcessing="true">
+          <match url="^[a-zA-Z-ÀÁÂÃÈÉÊÌÍÒÓÔÕÙÚĂĐĨŨƠàáâãèéêếìíòóôõùúăđĩũơƯĂẠẢẤẦẨẪẬẮẰẲẴẶẸẺẼỀỀỂưăạảấầẩẫậắằẳẵặẹẻẽềềểỄỆỈỊỌỎỐỒỔỖỘỚỜỞỠỢỤỦỨỪễệỉịọỏốồổỗộớờởỡợụủứừỬỮỰỲỴÝỶỸửữựỳỵỷỹ]+$" />
+          <action type="Rewrite" url="Post/Index?url={R:0}" />
+        </rule>
+        
+        <rule name="API" stopProcessing="true">
+          <match url="^Post/[a-zA-Z]+$" />
+          <action type="Rewrite" url="{R:0}" />
+        </rule>
+
+<!--        <rule name="js" stopProcessing="true">-->
+<!--          <match url="^[\/]js[a-zA-Z0-9\.\/?=-]+$" />-->
+<!--          <action type="Rewrite" url="{R:0}" />-->
+<!--        </rule>-->
+<!--        -->
+<!--        <rule name="Content" stopProcessing="true">-->
+<!--          <match url="^[\/]Content[a-zA-Z0-9\.\/?=-]+$" />-->
+<!--          <action type="Rewrite" url="{R:0}" />-->
+<!--        </rule>-->
+<!--        -->
+<!--        <rule name="fonts" stopProcessing="true">-->
+<!--          <match url="^[\/]fonts[a-zA-Z0-9\.\/?=-]+$" />-->
+<!--          <action type="Rewrite" url="{R:0}" />-->
+<!--        </rule>-->
+<!--        -->
+<!--        <rule name="All" stopProcessing="true">-->
+<!--          <match url="[^]*" />-->
+<!--          <action type="Rewrite" url="Post/Index?url={R:0}" />-->
+<!--        </rule>-->
+        
+      </rules>
+    </rewrite>
+    
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
-   <httpProtocol>
+    
+    <httpProtocol>
       <customHeaders>
         <add name="Access-Control-Allow-Headers" value="Content-Type" />
         <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE" />
         <add name="Access-Control-Allow-Origin" value="*" />
       </customHeaders>
     </httpProtocol>
+  
   </system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
